Fix search spacing

--- a/src/containers/MovieSearch/MovieSearch.scss
+++ b/src/containers/MovieSearch/MovieSearch.scss
@@ -11,6 +11,7 @@
   }
 
   input[type='submit'] {
+    margin: 5px;
     background-color: #e1735b;
     font-size: 24px;
     padding: 2px 12px;
@@ -26,6 +27,7 @@
     }
 
     input[type='submit'] {
+      margin: 5px;
       background-color: #e1735b;
       font-size: 24px;
       padding: 10px 15px;
